# checkbox

./: .env.template  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  test.env
docker/testrunner/: Dockerfile  docker-entrypoint.sh
docker/web/: Dockerfile
src/checkbox/: config.py
src/checkbox/database/: setup.py
src/checkbox/database/alembic/: env.py
src/checkbox/database/alembic/versions/: be5d2fa483ce_init.py
src/checkbox/database/models/: __init__.py  base.py  receipt.py  receipt_product.py  user.py
src/checkbox/di/: __init__.py  auth.py  main.py  service.py
src/checkbox/dto/: generic.py  receipt.py  user.py
src/checkbox/exceptions/: base.py  receipts.py
src/checkbox/services/: receipt_service.py  user.py
src/checkbox/web/: main.py
src/checkbox/web/exception_handlers/: __init__.py  checkbox_exception.py
src/checkbox/web/routers/: __init__.py  receipts.py  users.py
tests/: conftest.py  test_receipts.py  test_users.py
